--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 body {
-    background-image: url("https://github.com/DavidLim93/DavidLim.github.io/blob/main/CSS/Northern_Lights.jpg");
+    background-image: url("./Northern_Lights.jpg");
 }
 
 
