--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,12 +25,13 @@ body {
     display: flex;
 align-items: center;
 justify-content: center;
-height: 100vh;
+height: 120vh;
 top: 0px;
 bottom: 0px;
 text-align: center;
 margin-left: 500px;
 margin-right: 500px;
+padding: 30px;
 }
 
 
@@ -54,4 +55,9 @@ margin-right: 500px;
     padding: 50px 0;
     margin-right: 60px;
   
+  }
+
+  @viewport {
+    width: device-width;
+    zoom: 1.0 ;
   }
