--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,13 +25,13 @@ body {
     display: flex;
 align-items: center;
 justify-content: center;
-height: 120vh;
+height: 100%;
 top: 0px;
 bottom: 0px;
 text-align: center;
-margin-left: 500px;
-margin-right: 500px;
-padding: 30px;
+margin-left: auto;
+margin-right: auto;
+padding: 50px;
 }
 
 
