--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,8 @@ h1 {
     font-size: 80px;
     font-weight: bold;
     color: lightseagreen;
+    font-style: italic;
+   font-family: Baskerville, 'Times New Roman', serif;
     
 }
 
@@ -20,7 +22,7 @@ body {
 
 
 .wrapper {
-    background-color: white;
+    background-color: lightcyan;
     width: 800px;
     display: flex;
 align-items: center;
@@ -29,9 +31,9 @@ height: 100%;
 top: 0px;
 bottom: 0px;
 text-align: center;
-margin-left: auto;
-margin-right: auto;
+margin: auto;
 padding: 50px;
+
 }
 
 
@@ -39,7 +41,10 @@ padding: 50px;
     display: block;
   float: left;
   display: inline-flex;
-  margin-top: 20px;
+  margin: 30px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: beige;
 
 
 }
@@ -53,11 +58,22 @@ padding: 50px;
   h2 {
     text-align: center;
     padding: 50px 0;
-    margin-right: 60px;
+    margin-right: 80px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: darkblue;
   
   }
 
   @viewport {
     width: device-width;
     zoom: 1.0 ;
+  }
+
+
+  #logo {
+    display: inline-block;
+    float: left;
+    width: 20px;
+    height: 20px;
+  
   }
