--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,12 +8,26 @@ h1 {
 }
 
 
-.para {
+.p1 {
     
     width: 300px;
-    height: 160px;
-    margin: 20px;
+    height: 110px;
+    margin: 40px;
 
+}
+
+.p2 {
+    
+  width: 300px;
+  height: 150px;
+  margin: 40px;
+}
+ 
+.p3 {
+    
+    width: 300px;
+    height: 190px;
+    margin: 40px;
 }
 
 html { 
@@ -25,7 +39,7 @@ background-repeat: no-repeat;
 
 .wrapper {
     background-color: lightcyan;
-    width: 800px;
+    width: 600px;
     display: flex;
 align-items: center;
 justify-content: center;
@@ -57,22 +71,16 @@ padding: 50px;
   
   h2 {
     text-align: center;
-    padding: 50px 0;
-    margin-right: 80px;
+    padding: 20px 0;
+    
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: darkblue;
   
   }
 
-  @viewport {
-    width: device-width;
-    zoom: 1.0 ;
-  }
-
 
   #logo {
     display: inline-block;
-    float: left;
     width: 20px;
     height: 20px;
   
