--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,5 +83,14 @@ padding: 50px;
     display: inline-block;
     width: 20px;
     height: 20px;
+    padding: 5px;
+  
+  }
+
+  #logo2 {
+    display: inline-block;
+    width: 30px;
+    height: 20px;
+    padding: 5px;
   
   }
