--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,7 @@ text-justify: inter-word;
 }
 
 
-html { 
+body { 
 background: url("./Northern_Lights.jpg") no-repeat center center fixed; 
 background-size: cover;
 background-repeat: no-repeat;
@@ -28,13 +28,15 @@ background-repeat: no-repeat;
   display: flex;
 align-items: center;
 justify-content: center;
-height: 100%;
+height: 85vh;
 text-align: center;
 margin: auto;
 padding: 50px;
 text-align: justify;
 text-justify: inter-word;
 position: relative;
+padding-top: 50px;
+margin-top: 30px;
 
 
 }
@@ -98,3 +100,49 @@ h2 {
   padding:10px;
   color:black;
  }
+
+ :visited {
+  text-decoration: none;
+  color: white;
+ }
+ 
+ .navbar {
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+ }
+ 
+ .dropdown-item {
+  color: black;
+ }
+ 
+ .collapse ul li a{
+  color:white;
+}
+ 
+.navbar-brand{
+  color:white;
+}
+ 
+.nav-link .nav-item{
+  color: white;
+}
+
+#logo2 {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+
+
+
+}
+
+#logo1 {
+  display: inline-block;
+  width: 40px;
+  height: 30px;
+  padding: 5px;
+
+
+
+}
